[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/objects/tree_for_test.png" type="Texture" id=1]
[ext_resource path="res://Sprites/objects/tree_fire_for_test.png" type="Texture" id=2]
[ext_resource path="res://tree.gd" type="Script" id=3]
[ext_resource path="res://Sprites/objects/stump.png" type="Texture" id=4]
[ext_resource path="res://SFX/treecut.wav" type="AudioStream" id=5]
[ext_resource path="res://SFX/splash.wav" type="AudioStream" id=6]
[ext_resource path="res://SFX/fire_2.wav" type="AudioStream" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.6357
height = 5.92932

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.747, 17.3059 )

[node name="tree" type="Area2D"]
position = Vector2( 0, 0.0809937 )
scale = Vector2( 2, 2 )
script = ExtResource( 3 )

[node name="Stump" type="Sprite" parent="."]
position = Vector2( 0.217477, 9.24203 )
scale = Vector2( 0.326092, 0.326092 )
texture = ExtResource( 4 )

[node name="FireSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="TreeSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="TreeCut" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -8.0

[node name="Splash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -8.0

[node name="Fire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -8.0
[connection signal="body_entered" from="." to="." method="_on_tree_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_tree_body_exited"]
